// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders DrawerItem with icon 1`] = `
<View>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "marginHorizontal": 10,
            "marginVertical": 4,
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 4,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "padding": 8,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": "rgba(0, 0, 0, 0.68)",
                "fontSize": 24,
              },
            ]
          }
        >
          □
        </Text>
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              Object {
                "textAlign": "left",
              },
              Array [
                Object {
                  "marginRight": 32,
                },
                Object {
                  "color": "rgba(0, 0, 0, 0.68)",
                  "fontFamily": "System",
                  "fontWeight": "500",
                  "marginLeft": 32,
                },
              ],
            ]
          }
        >
          Example item
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders active DrawerItem 1`] = `
<View>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "selected": true,
      }
    }
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "marginHorizontal": 10,
            "marginVertical": 4,
          },
          Object {
            "backgroundColor": "rgba(98, 0, 238, 0.12)",
            "borderRadius": 4,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "padding": 8,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": "#6200ee",
                "fontSize": 24,
              },
            ]
          }
        >
          □
        </Text>
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              Object {
                "textAlign": "left",
              },
              Array [
                Object {
                  "marginRight": 32,
                },
                Object {
                  "color": "#6200ee",
                  "fontFamily": "System",
                  "fontWeight": "500",
                  "marginLeft": 32,
                },
              ],
            ]
          }
        >
          Example item
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders basic DrawerItem 1`] = `
<View>
  <View
    accessibilityRole="button"
    accessibilityState={
      Object {
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "marginHorizontal": 10,
            "marginVertical": 4,
          },
          Object {
            "backgroundColor": "transparent",
            "borderRadius": 4,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "padding": 8,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "System",
                "fontWeight": "400",
              },
              Object {
                "textAlign": "left",
              },
              Array [
                Object {
                  "marginRight": 32,
                },
                Object {
                  "color": "rgba(0, 0, 0, 0.68)",
                  "fontFamily": "System",
                  "fontWeight": "500",
                  "marginLeft": 0,
                },
              ],
            ]
          }
        >
          Example item
        </Text>
      </View>
    </View>
  </View>
</View>
`;
